@@ -1,3 +1,8 @@
+2005-10-05  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* Job.cc, Job.h: fixed core dump with KillAll.
+	* HttpDir.cc: fixed prefix path removing.
+
 2005-10-01  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* ftpclass.cc: skip all spaces in FEAT reply to workaround some
